--- a/helm3/helloworldspringboot/templates/deployment.yaml
+++ b/helm3/helloworldspringboot/templates/deployment.yaml
@@ -33,6 +33,11 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: ACCESS_TYPE
+              value: "Public"
+            - name: SYSTEM_ID
+              value: "123-456-789"
           ports:
             - name: http
               containerPort: {{ .Values.service.targetPort }}
