--- a/helm3/helloworldspringboot/Chart.yaml
+++ b/helm3/helloworldspringboot/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: helloworldspringboot
 description: A Helm chart for Kubernetes
+icon: https://cdn4.iconfinder.com/data/icons/got-idea-vol-2/128/change_password_decode-512.png
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,10 +16,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.0.0
+version: 1.0.2
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.0.0"
+appVersion: "1.0.2"
