--- a/helm3/helloworldspringboot/values.yaml
+++ b/helm3/helloworldspringboot/values.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 3
+replicaCount: 1
 
 image:
   repository: naekharahap/helloworldspringboot
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.0"
+  tag: "1.0.2"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -85,3 +85,7 @@ affinity: {}
 
 route:
   enabled: true
+
+secret:
+  apikey: ""
+  apiid: ""
