--- a/helm3/helloworldspringboot/templates/secret.yaml
+++ b/helm3/helloworldspringboot/templates/secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: {{ include "helloworldspringboot.fullname" . }}
+  name: helloworldspringboot
 
 data:
   API_KEY: {{ .Values.secret.apikey }}
