--- a/helm3/helloworldspringboot/templates/configMap.yaml
+++ b/helm3/helloworldspringboot/templates/configMap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "helloworldspringboot.fullname" . }}
+  name: helloworldspringboot
   
 data:
   LANGUAGE: English
