--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-*.log
 
 ### STS ###
 .apt_generated
@@ -32,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Log files ###
+.log
